edited the html&css files added somethings

--- a/index.html
+++ b/index.html
@@ -256,14 +256,32 @@
         <p>we porn to create</p>
         <div class="info">
           <p class="label">Feel free to drop us a line at:</p>
-          <a href="leonagency@mail.com?subject=Contact" class="link"
-            >leonagency@mail.com</a
+          <!-- edits 2024-june-9  -->
+          <!-- edited to my personal email -->
+          <a href="aymanqadasi89@mail.com?subject=Contact" class="link"
+            >aymanqadasi89@mail.com</a
           >
           <div class="social">
             Find us on social networks:
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-x-twitter"></i>
+
+            <!-- edits 2024-june-9  -->
+            <!-- added links to the icons of social media -->
+            <a
+              class="iconslinks"
+              href="https://www.instagram.com/iamaymo/
+            "
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+
+            <a
+              class="iconslinks"
+              href="https://t.me/iamaymo
+            "
+              ><i class="fa-brands fa-telegram"></i
+            ></a>
+            <a href="https://github.com/iamaymo" class="iconslinks"
+              ><i class="fa-brands fa-github"></i
+            ></a>
           </div>
         </div>
       </div>
